<resources>
    <string name="app_name">Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="value_hint">000</string>

   <!-- Buttons -->
    <string name="percent">%</string>
    <string name="delete">d</string>
    <string name="seven">7</string>
    <string name="equals">=</string>
    <string name="open_bracket">(</string>
    <string name="three">3</string>
    <string name="zero">0</string>
    <string name="clean">C</string>
    <string name="eight">8</string>
    <string name="six">6</string>
    <string name="point">.</string>
    <string name="plus">+</string>
    <string name="nine">9</string>
    <string name="one">1</string>
    <string name="minus">-</string>
    <string name="four">4</string>
    <string name="division">/</string>
    <string name="two">2</string>
    <string name="multiplication">*</string>
    <string name="f">f</string>
    <string name="five">5</string>
    <string name="close_bracket">)</string>
</resources>